<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="text_search">Поиск</string>
    <string name="text_media_library">Медиатека</string>
    <string name="text_settings">Настройки</string>
    <string name="text_switch_dark_theme">Темная тема</string>
    <string name="text_share_app">Поделиться приложением</string>
    <string name="text_write_to_support">Написать в поддержку</string>
    <string name="text_user_agreement">Пользовательское соглашение</string>
    <string name="support_message_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email" translatable="false">kardashin.s.n@gmail.com</string>
    <string name="mail_app_not_found">Почтовое приложение не найдено!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_link" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="share_chooser_text">Поделиться приложением</string>
    <string name="support_chooser_text">Написать письмо с помощью</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_not_connection">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="favourite_tracks_placeholder_text">Ваша медиатека пуста</string>
    <string name="playlists_placeholder_text">Вы не создали\n ни одного плейлиста</string>
    <string name="playlists">Плейлисты</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="browser_app_not_found">Браузер не найден!</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_created_toast">Плейлист \"%1$s\" создан</string>
    <string name="playlist_saved_toast">Плейлист \"%1$s\" сохранён</string>
    <string name="track_in_playlist_already">Трек уже добавлен в плейлист "%1$s"</string>
    <string name="track_added_to_playlist">Добавлено в плейлист "%1$s"</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="playlist_creation_exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_creation_exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_creation_exit_dialog_cancel">Отмена</string>
    <string name="playlist_creation_exit_dialog_confirm">Завершить</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="empty_playlist_share_toast">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="menu_share">Поделиться</string>
    <string name="playlist_share">Поделиться плейлистом</string>
    <string name="menu_edit">Редактировать информацию</string>
    <string name="menu_delete">Удалить плейлист</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
</resources>