<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical">

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/main_font_size"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginStart="@dimen/margin_horizontal">
    </TextView>

    <Button
        android:id="@+id/search_but"
        android:text="@string/text_search"
        app:icon="@drawable/search_icon"
        style="@style/MainMenuButtonsStyle"
        android:layout_marginTop="24dp"/>


    <Button
        android:id="@+id/media_library_button"
        android:text="@string/text_media_library"
        app:icon="@drawable/media_library_icon"
        style="@style/MainMenuButtonsStyle"/>


    <Button
        android:id="@+id/settings_button"
        android:text="@string/text_settings"
        app:icon="@drawable/settings_icon"
        style="@style/MainMenuButtonsStyle"
        android:layout_marginBottom="@dimen/margin_vertical"/>

</LinearLayout>