<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.settings.presentation.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="@string/text_settings"
        app:titleTextAppearance="@style/TextAppearanceAppbar"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="?attr/colorOnPrimary"
        />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme_button"
        style="@style/SettingsMenuButtonsStyle"
        android:checked="false"
        android:text="@string/text_switch_dark_theme"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <Button
        android:id="@+id/shareButton"
        style="@style/SettingsMenuButtonsStyle"
        android:text="@string/text_share_app"
        app:icon="@drawable/share_icon" />

    <Button
        android:id="@+id/supportButton"
        style="@style/SettingsMenuButtonsStyle"
        android:text="@string/text_write_to_support"
        app:icon="@drawable/support_icon" />

    <Button
        android:id="@+id/userAgreementButton"
        style="@style/SettingsMenuButtonsStyle"
        android:text="@string/text_user_agreement"
        app:icon="@drawable/arrow_forward_icon" />

<!--    <Space-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="8"/>-->

<!--    Еесли ты не против - я пока что просто закомментирую эту часть, т.к. реализовал-->
<!--    я её не просто так, у нас в домашних заданиях даны ссылки на неправильные макеты-->
<!--    https://www.figma.com/design/WKIfi0QI0g90ImfTOgvVbN/Playlist-Maker-(YP)?node-id=470-24157&t=MaMcIcm4MHZwYvFZ-0 -->
<!--    вот ссылка на макет экрана настроек из первого домашнего задания 8 спринта.-->
<!--    https://www.figma.com/design/WKIfi0QI0g90ImfTOgvVbN/Playlist-Maker-(YP)?node-id=470-28905&t=KL1SOrGZLoXItF7d-0 -->
<!--    вот ссылка на тот же макет в темном варианте из первого домашнего задания 9 спринта. -->
<!--    В обоих вариантах есть навигационная панель с кнопками снизу. А проверяете вы нас, получается,-->
<!--    по другим макетам. -->

    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        style="?android:attr/buttonBarStyle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        app:layout_constraintBottom_toBottomOf="parent">-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/search_button"-->
<!--            style="@style/SettingsButtonsBarStyle"-->
<!--            android:text="@string/text_search"-->
<!--            app:icon="@drawable/search_icon"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/media_library_button"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/media_library_button"-->
<!--            style="@style/SettingsButtonsBarStyle"-->
<!--            android:text="@string/text_media_library"-->
<!--            app:icon="@drawable/media_library_icon"-->
<!--            app:layout_constraintHorizontal_weight="1"-->
<!--            app:layout_constraintStart_toEndOf="@+id/search_button"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/settings_button"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/settings_button"-->
<!--            style="@style/SettingsButtonsBarStyle"-->
<!--            android:text="@string/text_settings"-->
<!--            android:textColor="@color/YP_Blue"-->
<!--            app:icon="@drawable/settings_icon"-->
<!--            app:iconTint="@color/YP_Blue"-->
<!--            app:layout_constraintHorizontal_weight="1"-->
<!--            app:layout_constraintStart_toEndOf="@+id/media_library_button"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</LinearLayout>
