<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.practicum.playlistmaker.search.presentation.ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:title="@string/text_search"
            app:titleTextAppearance="@style/TextAppearanceAppbar"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="@dimen/main_margin_horizontal_16dp"
            android:background="@drawable/edit_search_background">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_width"
                android:drawableStart="@drawable/small_search_icon"
                android:drawablePadding="8dp"
                android:drawableTint="?attr/colorSearchHintText"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/text_search"
                android:imeOptions="actionDone"
                android:minHeight="36dp"
                android:paddingStart="@dimen/main_margin_horizontal_16dp"
                android:paddingEnd="56dp"
                android:singleLine="true"
                android:textColor="?attr/colorOnSecondary"
                android:textColorHint="?attr/colorSearchHintText"
                android:textCursorDrawable="@drawable/cursor"
                android:textFontWeight="400" />

            <Button
                android:id="@+id/clearSearchTextButton"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/cross"
                android:drawableTint="?attr/colorSearchHintText"
                android:gravity="center"
                android:paddingEnd="@dimen/main_margin_horizontal_16dp"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/historyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="52dp"
                android:text="@string/search_history_title"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                android:textFontWeight="500"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                >
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/clearSearchHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorOnPrimary"
                app:cornerRadius="54dp"
                android:text="@string/search_history_clear"
                android:textColor="?attr/colorPrimary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                >
            </Button>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/main_margin_vertical_10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:visibility="gone">
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/notFoundErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="102dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/not_found_image"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_not_found"
                    android:fontFamily="@font/ys_display_medium"
                    android:textSize="@dimen/search_messages_text_size_19sp"
                    android:textFontWeight="400"
                    android:textColor="?attr/colorOnPrimary"
                    android:layout_marginTop="16dp">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connectionErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="102dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_connection_error_image"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_not_connection"
                    android:fontFamily="@font/ys_display_medium"
                    android:textSize="@dimen/search_messages_text_size_19sp"
                    android:textFontWeight="400"
                    android:textColor="?attr/colorOnPrimary"
                    android:breakStrategy="balanced"
                    android:gravity="center"
                    android:layout_marginTop="16dp">
                </TextView>

                <Button
                    android:id="@+id/searchRefreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    app:cornerRadius="56dp"
                    android:text="@string/search_refresh"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorPrimary"
                    android:fontFamily="@font/ys_display_medium"
                    android:textSize="14sp"
                    android:textFontWeight="500">
                </Button>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/YP_Blue"
        android:visibility="gone" />

</FrameLayout>
